# Kanban

./: .dockerignore  .gitignore  Dockerfile  design.md
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  db.py  main.py
backend/tests/: test_ai.py  test_app.py
docs/: PLAN.md  SCHEMA.md
frontend/: AGENTS.md  package-lock.json  package.json
frontend/app/: ChatSidebar.js  LoginScreen.js  globals.css  layout.js  page.js
scripts/: AGENTS.md  start.cmd  start.ps1  start.sh  stop.cmd  stop.ps1  stop.sh
